[tool.poetry]
name = "spase-stations"
version = "0.1.0"
description = ""
authors = ["Denis Sharhov <you@example.com>"]
readme = "README.md"
packages = [{include = "spase_stations"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
